--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-h1 {
-  font-family: 'Grenze';
-  font-size: 50px;
-  text-align: center;
+html {
+  scroll-behavior: smooth;
+  font-family: 'Grenze-Regular';
 }
