--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,33 @@
+/* colors ---> dark blue (rgb 0,46,99) */
+
 html {
   scroll-behavior: smooth;
   font-family: 'Grenze-Regular';
 }
+
+body {
+  margin: 20px 25px;
+}
+
+header {
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: solid 2px rgb(0, 46, 99);
+  padding-bottom: 30px;
+}
+
+.icon {
+  background-color: rgb(0, 46, 99);
+  color: whitesmoke;
+  font-size: 60px;
+  padding: 1px 22px;
+  margin: 0;
+}
+
+.page-title {
+  color: rgb(0, 46, 99);
+  font-family: 'Grenze-Light';
+  font-size: 60px;
+  margin: 5px 0 0 25px;
+}
+
