--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  margin: 20px 25px;
+  margin: 20px 0;
 }
 
 header {
@@ -14,6 +14,7 @@ header {
   flex-wrap: wrap;
   border-bottom: solid 2px rgb(0, 46, 99);
   padding-bottom: 30px;
+  margin: 0 25px;
 }
 
 .icon {
@@ -37,6 +38,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 0 25px;
 }
 
 .chapter-selection {
@@ -50,7 +52,7 @@ header {
 }
 
 figure {
-  margin: 0;
+  margin: 0 25px;
 }
 
 .weights-opening {
@@ -62,4 +64,16 @@ figcaption {
   color: white;
   border: solid black 2px;
   margin: 0 0 53px 2px;
+}
+
+.alphabet-normal {
+  margin: 0 25px;
+}
+
+.alphabet-gotisch {
+  margin: 30px 25px;
+}
+
+.weights-typeface {
+  padding: 0;
 }
