--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,13 @@ h3 {
 .weights-show {
   margin: 25px 25px;
 }
+
+figure {
+  margin: 0 25px;
+}
+
+.weights-opening {
+  border: solid black 2px;
+  margin: 0 70px 0 0;
+}
+
