Recoding css <p> blocs
Recoding .history & .creator-information

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,14 @@ figure {
   margin: 0 70px 0 0;
 }
 
+.history {
+  font-family: 'Grenze-Regular';
+  padding: 0 25px;
+  margin: 30px 0 45px 0;
+}
+
+.creator-information {
+  font-family: 'Grenze-Regular';
+  padding: 0 25px;
+  margin: 30px 0 45px 0;
+}
