--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,11 @@ figure {
 .dw-exemple {
   margin-bottom: 25px;
 }
+
+.alphabet-normal {
+  margin: 25px 25px 0;
+}
+
+.alphabet-gotisch {
+  margin: 30px 25px;
+}
