--- a/css/styles.css
+++ b/css/styles.css
@@ -63,12 +63,14 @@ figure {
 
 .history {
   font-family: 'Grenze-Regular';
+  text-align: justify;
   padding: 0 25px;
   margin: 30px 0 45px 0;
 }
 
 .creator-information {
   font-family: 'Grenze-Regular';
+  text-align: justify;
   padding: 0 25px;
   margin: 30px 0 45px 0;
 }
@@ -138,3 +140,4 @@ h4 {
   padding: 5px;
   border: solid rgba(0, 46, 99, 0.2) 1px;
 }
+
