--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,27 @@ h4 {
   border: solid rgba(0, 46, 99, 0.2) 1px;
 }
 
+.banner-devil {
+  color: whitesmoke;
+  font-size: 30px;
+  margin: 0;
+}
+
+.top-banner {
+  background-color: rgb(0, 46, 99);
+  font-family: 'GrenzeGotisch-ExtraLight';
+}
+
+.middle-banner {
+  background-color: rgb(96, 130, 182);
+  font-family: 'GrenzeGotisch-Thin';
+}
+
+.bottom-banner {
+  background-color: rgb(161, 202, 241);
+  font-family: 'GrenzeGotisch-Light';
+}
+
 footer {
   display: flex;
   flex-direction: column;
